added navand hero css

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <ul><!--nav links-->
                         <li><a href="about.html" class="about">About</a></li>
                         <li><a href="work.html" class="work">Work</a>
-                            <ul>
+                            <!--<ul>
                                 <li><a href="crux.html.html">CRUX</a></li>
                                 <li><a href="jsweets.html">JSweets</a></li>
                                 <li><a href="wisemoves.html">Wise Moves</a></li>
-                            </ul>
+                            </ul>-->
                         </li>
                         <li><a href="contact.html" class="contact">Contact</a></li>
                     </ul>
@@ -44,8 +44,8 @@
             <div class="row">
                 <div class="left">
                     <img src="/images/crux-logo-head2.png" alt="CRUX logo"/><br>
-                    <p>Connecting small businesses with budding wen professionals to trade products and services.</p><br>
-                    <button type="button" class="alert button">View Case Study</button>
+                    <p>Connecting small businesses with<br/> budding web professionals to trade<br/> products and services.<br/></p><br>
+                    <p class="button">View Case Study</p>
                 </div>
                 <div class="right">
                     <img src="/images/Crux-Laptop.png" alt="CRUX Home"/>
@@ -67,6 +67,9 @@
         </div>
         <div class="container footer"> <!--footer-->
             <div class="row">
+                <p> &copy; <script type="text/javascript">
+  document.write(new Date().getFullYear());
+</script>. Jean Juliano - All Rights Reserved. </p>
             </div>
         </div>
         
