edited nav and hero

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container hero"> <!--hero-->
             <div class="row">
                 <div class="left">
-                    <img src="/images/crux-logo-head2.png" alt="CRUX logo"/><br>
+                    <img src="/images/crux_logo.png" alt="CRUX logo"/><br>
                     <p>Connecting small businesses with<br/> budding web professionals to trade<br/> products and services.<br/></p><br>
                     <p class="button">View Case Study</p>
                 </div>
