--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container nav"> <!--nav bar-->
             <div class="row">
                 <div class="left">
-                    <p><span class="name">Jean Juliano</span> | UX Designer</p>
+                    <p><a href="index.html"><span class="name">Jean Juliano</span> | UX Designer</a></p>
                 </div>
                 <div class="right">
                     <ul><!--nav links-->
