added crux content & photos

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@ When I am not designing, coding, or attending events, I like <span>learning how 
         
         <div class="container links"> <!--Links-->
             <div class="row">
-                <p class="button">View Case Study</p>
+                <p class="button"><a href="crux.html">View Case Study</a></p>
                 <br><br>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/jeanjuliano"><i class="fa fa-linkedin-square"></i></a></li>
