--- a/about.html
+++ b/about.html
@@ -27,12 +27,13 @@
                 <div class="right">
                     <ul><!--nav links-->
                         <li class="about"><a href="about.html" class="about">About</a></li>
-                        <li><a href="work.html" class="work">Work</a>
-                            <!--<ul>
-                                <li><a href="crux.html.html">CRUX</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropbtn">Work</a>
+                            <ul class="dropdown-content">
+                                <li><a href="crux.html">CRUX</a></li>
                                 <li><a href="jsweets.html">JSweets</a></li>
                                 <li><a href="wisemoves.html">Wise Moves</a></li>
-                            </ul>-->
+                            </ul>
                         </li>
                         <li><a href="contact.html" class="contact">Contact</a></li>
                     </ul>
@@ -84,6 +85,7 @@ When I am not designing, coding, or attending events, I like <span>learning how 
         </div>
         
         <!--Javascript-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
         <script src="js/dropit.js"></script>
         <script src="js/landing.js"></script>
         <script type="text/javascript">
