case revisions complete

--- a/crux.html
+++ b/crux.html
@@ -259,7 +259,7 @@ The second phase of this project will be to conduct research of small businesses
 
             <!--(insert image of doodles and final logo design)-->
             <br><br>
-
+            </div>
         </div>
     </div>
 </div>
