edited image paths

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <div class="container hero"> <!--hero-->
             <div class="row">
                 <div class="left">
-                    <img src="/images/crux_logo.png" alt="CRUX logo"/><br>
+                    <img src="images/crux_logo.png" alt="CRUX logo"/><br>
                     <p>Connecting small businesses with<br/> budding web professionals to trade<br/> products and services.<br/></p><br>
                     <p class="button">View Case Study</p>
                 </div>
                 <div class="right">
-                    <img src="/images/Crux-Laptop.png" alt="CRUX Home"/>
+                    <img src="images/Crux-Laptop.png" alt="CRUX Home"/>
                 </div>
             </div>
         </div>
