--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/landing.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="css/dropit.css">
-        <link rel="stylesheet" type="text/css"href="css/animated.css">
-        
     </head>
 
     <body>
@@ -48,7 +45,7 @@
                 <div class="left">
                     <img src="images/crux_logo.png" alt="CRUX logo"/><br>
                     <p>Connecting small businesses with<br/> budding web professionals to trade<br/> products and services.<br/></p><br>
-                    <p class="button">View Case Study</p>
+                    <p class="button"><a href="crux.html">View Case Study</a></p>
                 </div>
                 <div class="right">
                     <img src="images/Crux-Laptop.png" alt="CRUX Home"/>
@@ -93,12 +90,5 @@
         
         <!--Javascript-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-        <script src="js/dropit.js"></script>
-        <script src="js/landing.js"></script>
-        <script type="text/javascript">
-        $(document).ready(function() {
-            $('.menu').dropit();
-        });
-        </script>
     </body>
 </html>
