started media-queries

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="left">
                     <img src="images/crux_logo.png" alt="CRUX logo"/><br>
-                    <p>Connecting small businesses with<br/> budding web professionals to trade<br/> products and services.<br/></p><br>
+                    <p>Connecting small businesses with  budding web professionals to trade products and services.<br/></p><br>
                     <p class="button"><a href="crux.html">View Case Study</a></p>
                 </div>
                 <div class="right">
