sent redirect incomplete

--- a/sent.html
+++ b/sent.html
@@ -60,9 +60,10 @@ jeanjuliano927@gmail.com</p>
             </div>
             <div class="form-background">
             <div class="contact-row">
+                <h3 class="sent">Thank you for your message! I will get back to you soon!</h3>
                 <form action="https://getsimpleform.com/messages?form_api_token=42ced0272a95370e27aa88ce2ee32a2f" method="post">
   <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
-                    <input type='hidden' name='redirect_to' value='https://jdjulian.github.io/thank-you' />
+                    <input type='hidden' name='redirect_to' value='https://jdjulian.github.io/thank-you>' />
   <!-- all your input fields here.... -->
             
                     <label for="first_name">Name</label><br>
@@ -76,7 +77,7 @@ jeanjuliano927@gmail.com</p>
 
                         <textarea  name="comments" maxlength="1000" cols="50" rows="12"></textarea><br>
                     
-                    <input class="contact-button" type='submit' value='Send'/>
+                    <input class="contact-button" type='submit' value='Send' />
 
                 </form>
             </div>
