message sent complete

--- a/sent.html
+++ b/sent.html
@@ -62,6 +62,7 @@ jeanjuliano927@gmail.com</p>
             <div class="contact-row">
                 <form action="https://getsimpleform.com/messages?form_api_token=42ced0272a95370e27aa88ce2ee32a2f" method="post">
   <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+                    <h3 class="thankyou">Thank you for your message. I will get back to you soon!</h3>
                     <input type='hidden' name='redirect_to' value='https://jdjulian.github.io/thank-you>' />
   <!-- all your input fields here.... -->
             
