--- a/crux.html
+++ b/crux.html
@@ -147,7 +147,7 @@
             <!--(provide link to screenshots of captured responses)-->
 
             <!--COMPETITIVE ANALYSIS-->
-            <h4>Competitive Aalysis</h4>
+            <h4>Competitive Analysis</h4>
                 <p>In further follow up, 3 companies were brought up in conversation in which I conducted a competitive analysis:</p><br>
                 <img src="images/crux-images/crux-competitive.png" alt="Competitive Analysis"><br><br>
             <!--(insert competitive analysis of Fiverr, Upwork, and DesignQuote)-->
