--- a/wisemoves.html
+++ b/wisemoves.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="css/case-studies.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css"href="css/dropit.css">
+        <script src="https://use.fontawesome.com/5d4afe597c.js"></script>
     </head>
 
     <body>
