--- a/contact.html
+++ b/contact.html
@@ -111,5 +111,17 @@ jeanjuliano927@gmail.com</p>
     <script type="text/javascript">
         $( "#menu" ).dropit();
         </script>
+        
+<!--Google Analytics Tracker-->            
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80983771-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     </body>
 </html>
