--- a/about.html
+++ b/about.html
@@ -65,11 +65,11 @@
             <div class="row">
                 <p>Hi! My name is Jean Juliano and am originally <span>from the island of Kauai, Hawaii.</span> I love networking with other people to learn about different things, especially when it comes to design and technology. I am a member of Women Who Code, Girl Develop It, and several UX Design meetup groups in the San Francisco Bay Area. <br><br>
 
-<span>Creative pursuits have been a part of my life at an early age.</span> I played the flute, bassoon, and piano and performed in plays for both school and community organizations since the age of 11. In my teenage years and through-out college, I worked in radio creating Public Service Announcements for productions and training students on radio editing software. <span>In my professional career, I have created commercials and done marketing for both radio and video, managed and organized sales teams for a company, owned my own business, and counseled college students on how to market themselves in their field.</span><br><br>
+<span>Creative pursuits have been a part of my life at an early age.</span> I played musical instruments and performed in plays for both school and community organizations since the age of 11. In my teenage years and through-out college, I worked in radio creating public service annoucements for production and trained students on radio editing software. <span>In my professional career, I have created commercials and done marketing for both radio and video, managed and organized sales teams for a company, owned my own business, and counseled college students on how to market themselves in their field.</span><br><br>
 
 This past year, <span>I have worked on projects that involved UX Design and Front-End Development.</span> I developed a passion for UX as it allows me to be both creative and strategic in my work, combining skills I have gained from my past experiences in early childhood and professional life. What I love most is being able to utilize my ability to communicate and relate to others to understand the best ways to create and guide a product. <br><br>
 
-When I am not designing, coding, or attending events, I like <span>learning how to play the guitar and cooking new recipes.</span> Take a look at some of my recent work, where I walk you through my research and design process in building each product! </p>
+When I am not designing, coding, or attending events, I like <span>learning how to play the guitar, cooking new recipes, and rock-climbing outdoors.</span> Take a look at some of my recent work, where I walk you through my research and design process in building each product! </p>
             </div>
         </div>
         
