--- a/crux.html
+++ b/crux.html
@@ -187,7 +187,7 @@
         <div class="row">
             <h3>BRANDING & IDENTITY</h3>
                 <h4>Business Name</h4>
-                    <p>CRUX is an acronym for Creating/Connecting Resources/Relationships and User Experiences. In the dictionary, CRUX is also defined as "a vital, basic, decisive, or pivotal point" and  "a particular point of difficulty," which is fitting in terms of the experience a budding web professional goes through in transitioning into a new career and what a small business faces when getting started.</p><br>
+                    <p>CRUX is an acronym for Creating Resources and User Experiences. In the dictionary, CRUX is also defined as "a vital, basic, decisive, or pivotal point" and  "a particular point of difficulty," which is fitting in terms of the experience a budding web professional goes through in transitioning into a new career and what a small business faces when getting started.</p><br>
 
             <!--COLOR SCHEME-->
             <h4>Color Scheme: </h4>
