--- a/wisemoves.html
+++ b/wisemoves.html
@@ -66,7 +66,7 @@
             <div class="row">
             <br><br>
             <h3>SUMMARY</h3>
-                <p>Wise Moves Pilates is a small business owned by Private Pilates Instructor, Leanne Aho, located in Berkeley, CA. I worked with her to redesign her <a href="http://inannaho.wix.com/wisemovespilates">old site</a> and craft an identity.</p><br>
+                <p>Wise Moves Pilates is a small business owned by Private Pilates Instructor, Leanne Aho, located in Berkeley, CA. I worked with her to redesign her <a href="http://inannaho.wix.com/wisemovespilates">old site</a> and craft an identity. Check out the progress of the <a href="https://jdjulian.github.io/wise-moves/">new site</a> I am building for desktop and laptop screens. Mobile version coming soon!</p><br>
                 <img src="images/WiseMoves-Laptop.png"/><br><br>
             </div>
             
@@ -192,7 +192,7 @@ Windsor is known for their easy to follow Pilates videos which cater primarily t
 
 The biggest thing I learned working on this project is that  situations for businesses can change at any moment, thus causing a pause in design or a shift all together. From this, I realize the importance in being flexible as a designer. A business's needs can change which can mean a change in the focus of the user you are designing for.<br><br>
 
-As Leanne and I work on finalizing the designs for this scope, I will also be developing her website using Wordpress so she may easily update her own blogs until she is ready to further expand on ideas with a more solid business plan. The site for this scope is set to launch at the end of July 2016.</p><br>
+As Leanne and I work on finalizing the designs for this scope, I will also be developing her website using Wordpress so she may easily update her own blogs until she is ready to further expand on ideas with a more solid business plan. The site for this scope is set to launch in October 2016.</p><br>
 
                 </div>
             </div>
